Made necessary changes to the id main-section

--- a/index.html
+++ b/index.html
@@ -17,13 +17,18 @@
       <button class="eraser">Eraser</button>
       <button class="clear">Clear</button>
       <section id="sub-section">
-        <p class="size-slider">16 x 16</p>
-        <input type="range" id="slider" class="size-slider" value="16" min="1" max="64">
+        <p class="size-slider">Pixel Size</p>
+        <p class="size-slider" id="size-value">64 x 64</p>
+        <p class="size-slider">Smallest to Largest</p>
+        <input type="range" id="slider" class="size-slider" value="64" min="1" max="64">
       </section>
       
     </section>
 
     <main id="container"></main>
+    <footer>
+        <p>&#169; Hitesh Chundi</p>
+    </footer>
     <script src="./script.js" defer></script>
   </body>
 </html>
