formatted the code

--- a/index.html
+++ b/index.html
@@ -20,14 +20,20 @@
         <p class="size-slider">Pixel Size</p>
         <p class="size-slider" id="size-value">64 x 64</p>
         <p class="size-slider">Smallest to Largest</p>
-        <input type="range" id="slider" class="size-slider" value="64" min="1" max="64">
+        <input
+          type="range"
+          id="slider"
+          class="size-slider"
+          value="64"
+          min="1"
+          max="64"
+        />
       </section>
-      
     </section>
 
     <main id="container"></main>
     <footer>
-        <p>&#169; Hitesh Chundi</p>
+      <p>&#169; Hitesh Chundi</p>
     </footer>
     <script src="./script.js" defer></script>
   </body>
