Added the necessary html for the random button

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <section id="main-section">
       <input type="color" id="favcolor" name="colorpicker" value="#000000" />
       <button class="color-mode">Color Mode</button>
+      <button class="random-mode">Random Color</button>
       <button class="eraser">Eraser</button>
       <button class="clear">Clear</button>
       <section id="sub-section">
